fix z-index problem

--- a/src/app/chatroom/devspace/devspace-channels/add-people-dialog/add-people-dialog.component.scss
+++ b/src/app/chatroom/devspace/devspace-channels/add-people-dialog/add-people-dialog.component.scss
@@ -320,3 +320,9 @@ input[type="radio"]:checked + label::before {
     }
   }
 }
+
+@media(max-width: 960px) {
+  .add-people-dialog {
+    z-index: 10;
+  }
+}
