--- a/src/app/chatroom/devspace/devspace-directmessages/add-friend-dialog/add-friend-dialog.component.scss
+++ b/src/app/chatroom/devspace/devspace-directmessages/add-friend-dialog/add-friend-dialog.component.scss
@@ -133,3 +133,9 @@ form {
     margin-bottom: -500px;
   }
 }
+
+@media(max-width: 960px) {
+  .add-friend-dialog {
+    z-index: 10;
+  }
+}
